|Priyanshu | changed alignment of validator page

--- a/views/validator-prompt-page.ejs
+++ b/views/validator-prompt-page.ejs
@@ -32,7 +32,7 @@
                     <div class="row justify-content-center mb-5 mb-lg-0" id="sentences-row">
                         <div class="col-md-8 col-sm-10 text-center prompt"><label class="h1 font-weight-normal" id="sentenceLabel"></label></div>
                     </div>
-                    <div class="validation-container">
+                    <div class="validation-container" id="validation-container">
                     <div class="row justify-content-center mx-2 d-none" id="loader-audio-row">
                         <div><span class="spinner w-h-5"></span></div>
                     </div>
