--- a/views/modals/speakerDetail.ejs
+++ b/views/modals/speakerDetail.ejs
@@ -91,9 +91,13 @@
                         </div>
                     </div>
                 </div>
-                <div class="form-check mt-2">
-                    <%- __('By proceeding ahead you agree to the <a href="/terms-and-conditions"> Terms and Conditions</a>') %>
+                <div class="form-group">
+                    <label class="form-label mt-2">
+                        <%- __('By proceeding ahead you agree to the <a href="/terms-and-conditions"> Terms and Conditions</a>') %>
+                    </label>
                 </div>
+
+
                 <div class="row justify-content-center mt-3">
                     <div class="col-12"><button type="button" id="proceed-box" class="btn btn-primary h6 shadow w-100 rounded p-3" data-toggle="modal" data-target="#languageModal">
                             <%= __('LET\'S GO') %>
