|Ramu| Fix language sentences

--- a/views/validator-prompt-page.ejs
+++ b/views/validator-prompt-page.ejs
@@ -51,7 +51,8 @@
                                 <%= __('Would you also like to contribute your voice?') %>
                             </p>
                             <div class="row justify-content-center mt-5">
-                                <div class="col-lg-3 col-md-6 col-8 text-center lead"><a href="/record" class="btn btn-primary btn-lg h6 w-100">
+                                <div class="col-lg-3 col-md-6 col-8 text-center lead" id="start_contributing_id">
+                                    <a class="btn btn-primary text-white btn-lg h6 w-100">
                                         <%= __('Start Contributing') %>
                                     </a></div>
                             </div>
