|Ramu|Fix thank you page title

--- a/assets/css/thank-you.css
+++ b/assets/css/thank-you.css
@@ -1,6 +1,12 @@
 .bg-thank-you {
   background-size: cover;
 }
+
+.thank-you-title {
+  width: 85%;
+  margin: 0 auto;
+}
+
 #graphcontainer {
   font-size: 0.2rem;
   position: relative;
