--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -38,7 +38,7 @@
                     <div class="champion-ribbon">
                         <span><%= __('You are a champion') %></span>
                     </div>
-                    <h4 class="mb-3"><%= __('WooHoo!! You took the first important step') %></h4>
+                    <h4 class="mb-3 thank-you-title"><%= __('WooHoo!! You took the first important step') %></h4>
                     <p><span id="user-contribution" class="text-primary">5</span> <%= __('recordings contributed') %></p>
                     <div class="mt-5 text-center">
                         <%= __('Share it with your friends and family') %>
