--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -64,10 +64,10 @@
             <div class="row mt-5">
                 <div class="col-lg-8 offset-lg-2 border p-4 stats-container">
                     <div class="row justify-content-around align-items-center">
-                        <div>
+                        <div class="title">
                             <%= __('Did you know?') %>
                         </div>
-                        <div>
+                        <div class="most-data-recorded">
                             <p><%= __('Most data recorded for') %> <span id="languageId"></span></p>
                             <div class="position-relative">
                                 <div class="progress mb-2 w-80">
@@ -76,7 +76,7 @@
                                 <span id="highest_language_time" class="time"></span>
                             </div>
                         </div>
-                        <div>
+                        <div class="lang-data-recorded">
                             <p><%= __('Data recorded for') %> <span id="languageChoiceId"></span></p>
                             <div class="position-relative">
                                 <div class="progress mb-2 w-80">
