--- a/views/record.ejs
+++ b/views/record.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title>Vakyansh: A crowdsourcing initiative for Indic languages</title>
+<head><title>Bolo India: A crowdsourcing initiative for Indic languages</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-169921734-1"></script>
