--- a/views/common/headerForContributor.ejs
+++ b/views/common/headerForContributor.ejs
@@ -1,5 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light px-4"><a class="logo-text text-dark" href="/">
-    <h2 class="mb-0">NPLT</h2></a>
+    <h2 class="mb-0">
+        <img src="/img/BoloIndiaLogo.png" alt="Bolo India" width="64px">
+    </h2></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
