|Priyanshu| reset size of say-listen logo

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -62,9 +62,7 @@
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-5 col-4">
-                            <div style="height:140px;width:140px">
-                                <img src="img/say.svg" alt="speaker" id="start_recording" data-toggle="modal" class="cursor-pointer w-auto" data-target="#userModal">
-                            </div>
+                                <img src="img/say.svg" alt="speaker" id="start_recording" data-toggle="modal" class="cursor-pointer say-logo" data-target="#userModal">
                         </div>
 
                         <div id="say-p-2" class="col-lg-7 col-md-7 col-12 d-none position-absolute" style="bottom:1rem">
@@ -89,8 +87,8 @@
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-5 col-4">
-                            <a href="/validator-page" style="height:140px;width:140px">
-                                <img src="img/listen.svg" alt="validator" id="start_validating" class="cursor-pointer w-auto"></a>
+                            <a href="/validator-page">
+                                <img src="img/listen.svg" alt="validator" id="start_validating" class="cursor-pointer listen-logo"></a>
                         </div>
                         <div class="col-lg-7 col-md-7 col-12 d-none position-absolute" id="listen-p-2" style="bottom:1rem">
                             <div>
