|Priyanshu| update home Page and about us page content

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -55,7 +55,7 @@
                     <div id="say_container" class="row align-items-center py-lg-5 position-relative" style="height:100%">
                         <div class="col-lg-7 col-md-7 col-8">
                             <h1 class="display-5">
-                                <%= __('Say') %>
+                                <%= __('Speak') %>
                             </h1>
                             <div class="mt-3 font-weight-bold">
                                 <%= __('Contribute Your Voice') %>
@@ -83,7 +83,7 @@
                                 <%= __('Listen') %>
                             </h1>
                             <div class="mt-3 font-weight-bold">
-                                <%= __('Verify What They Say') %>
+                                <%= __('Validate What They Say') %>
                             </div>
                         </div>
                         <div class="col-lg-5 col-md-5 col-4">
@@ -92,7 +92,7 @@
                         </div>
                         <div class="col-lg-7 col-md-7 col-12 d-none position-absolute" id="listen-p-2" style="bottom:1rem">
                             <div>
-                                <%= __('Help us by validating the voice samples that others have contributed') %>
+                                <%= __('Help us by validating the recordings that others have contributed') %>
                             </div>
                             <div class="col-7 col-lg-6 col-xl-6" id="listen-loader">
                                 <div><span class="spinner"></span></div>
@@ -105,10 +105,10 @@
             <div class="row">
                 <div class="col-12 col-md-7 col-lg-6 ml-lg-auto p-5 text-dark mt-4">
                     <h1 class="display-5 font-wt-900 site-blue lh-5 mt-lg-5">
-                        <%= __('Vakyansh: A crowdsourcing initiative for Indian languages') %>
+                        <%= __('Bolo India: A crowdsourcing initiative for Indian languages') %>
                     </h1>
                     <p class="h5 font-weight-light-lg font-weight-normal-sm lh-7 site-blue text-justify mt-5">
-                        <%= __('For the development of speech recognition models in Indian languages, there is a need for an open data repository of diversified Indian voices. Vakyansh invites you to reach out and contribute your voice to create a diverse open data repository of Indian voices.') %> <a class="ml-1" href="/about-us">
+                        <%= __('India needs to be Aatmanirbhar in the area of speech recognition in Indian languages.  Hence, we want to create an open data repository of many Indian voices. Bolo India invites you to volunteer contribute your voice for this cause.') %> <a class="ml-1" href="/about-us">
                                 <%= __('Know More') %>
                             </a>
                     </p>
