--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -17,3 +17,12 @@ h6,
 .logo-text:hover {
   text-decoration: none;
 }
+
+.version-beta {
+  font-size: 14px;
+  line-height: 17px;
+  margin-left: 24px;
+  border: 1px solid #343A40;
+  border-radius: 4px;
+  padding: 6px 12px;
+}
