--- a/views/modals/report-modal.ejs
+++ b/views/modals/report-modal.ejs
@@ -65,7 +65,7 @@
                         </label>
                     </div>
                 </div>
-                <textarea id="other_text" class="w-100 p-3 other-reason mb-4" rows="3" placeholder="Please specify the reason (Optional)"></textarea>
+                <textarea maxlength="1000" id="other_text" class="w-100 p-3 other-reason mb-4" rows="3" placeholder="Please specify the reason (Optional)"></textarea>
                 <div class="d-flex justify-content-center">
                     <button id="report_submit_id" class="btn btn-primary w-75" disabled="disabled">SUBMIT</button>
                 </div>
