|Priyanshu + Nikita + Sreejith| update translation for Hindi

--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -1,7 +1,7 @@
 <footer class="fixed-bottom bg-light pt-3 border-top mt-lg-2 w-100">
     <div class="container-fluid">
         <div class="d-flex flex-column-reverse flex-lg-row justify-content-lg-around align-items-sm-center align-items-md-center text-center">
-            <div class="">
+            <div class="d-none">
                 <p class="text-muted">Supported by EkStep Foundation (built on <a href="https://sunbird.org/ai">sunbird.org/ai</a>)</p>
             </div>
             <div class="d-lg-inline-flex justify-content-around mb-2">
