--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -55,7 +55,7 @@
                 <div class="row">
                     <div class="col-sm-6 offset-sm-3 d-flex flex-column align-items-center text-center">
                         <h2 class="font-wt-900">Thank You for your valueable feedback</h2>
-                        <p class="p-5">Your feedback helps us to keep the portal relevant to you, we appreciate you taking <br> time to leave feedback for us.</p>
+                        <p class="p-5">Your feedback helps us keep the initiative relevant, we appreciate you taking time to leave the feedback.</p>
                         <a role="button" href="/" class="btn btn-outline-primary d-flex justify-content-center align-items-center mt-3" id="back_to_home_btn">Back to Home</a>
                     </div>
                 </div>
