--- a/views/validator-prompt-page.ejs
+++ b/views/validator-prompt-page.ejs
@@ -42,10 +42,10 @@
                     </div>
                     <div class="row justify-content-center mb-5 mb-lg-0 mt-lg-5 d-none" id="no-sentences-row">
                         <div class="col-md-8 col-sm-10 text-center"><label class="h1 font-weight-bold">
-                                <%= __('Thank you for your enthusiasm to validate the voice samples') %>
+                                <%= __('Thank you for your enthusiasm to validate the recordings.') %>
                             </label><br><br>
                             <p>
-                                <%- __('We have recently commenced the data contribution journey for <span id="spn-validation-language"></span> language and hope that very soon there will be voice samples collected for your validation.') %>
+                                <%- __('We do not have any data in <span id="spn-validation-language"></span> language. Please try again later.') %>
                             </p>
                             <p>
                                 <%= __('Would you also like to contribute your voice?') %>
@@ -53,7 +53,7 @@
                             <div class="row justify-content-center mt-5">
                                 <div class="col-lg-3 col-md-6 col-8 text-center lead" id="start_contributing_id">
                                     <a class="btn btn-primary text-white btn-lg h6 w-100">
-                                        <%= __('Start Contributing') %>
+                                        <%- __('Start Contributing in <span id="start-validation-language"></span>') %>
                                     </a></div>
                             </div>
                         </div>
