--- a/views/about-us.ejs
+++ b/views/about-us.ejs
@@ -74,7 +74,7 @@
                         <%= __('Crowd Sourcing & your contribution') %>
                     </p>
                     <p class="lead lh-7 mt-5 font-weight-normal-sm">
-                        <%= __('Speech recognition relies on "machine-learning" technology that requires large datasets that include diverse Ivoices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative') %> <br><br>
+                        <%= __('Speech recognition relies on "machine-learning" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative') %> <br><br>
                             <%= __('This is where you come in.') %><br><br>
                                 <%= __('We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off') %> <br><br>
                                     <%= __('Every minute of your contribution will make a huge difference and bring us closer to our objective.') %>
@@ -96,7 +96,7 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid bg-blue">
+        <div class="container-fluid bg-blue d-none">
             <div class="text-center text-white pt-5">
                 <%= __('ABOUT THE ORGANISATION') %>
             </div>
