--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -23,7 +23,7 @@
                     <div class="row">
                         <div class="col-12 col-md-7 col-lg-6">
                             <div class="text-muted mb-2">
-                                <%= __('Select the language') %>:
+                                <%= __('Select a language') %>:
                             </div>
                         </div>
                     </div>
@@ -119,7 +119,7 @@
                         </div>
                         <div class="col-12 col-lg-5 text-center chart d-none">
                             <div class="text-left pb-3 chart-title">
-                                <%= __('Gender Contribution') %>
+                                <%= __('Gender Distribution') %>
                             </div>
                             <div id="gender-chart" class="h-100 pb-4"></div>
                         </div>
