--- a/views/record.ejs
+++ b/views/record.ejs
@@ -56,7 +56,7 @@
                     </div>
                 </div>
                 <div class="row justify-content-around mx-3 mx-lg-0 mx-xl-5 mb-2">
-                    <div class="col-lg-5 col-md-10 px-0 mb-4 mb-lg-0">
+                    <div class="col-lg-5 col-md-10 px-0 mb-2 mb-lg-0">
                         <div class="row justify-content-center">
                             <div class="col-lg-5 col-8 col-md-5 col-sm-5 mb-2 mb-lg-0">
                                 <button id="test-mic-button" data-value="test-mic" class="test-btn">
@@ -68,6 +68,20 @@
                             </div>
                             <div class="col-lg-7 col-12 col-md-7 col-sm-8 d-flex align-items-center">
                                 <canvas class="w-100 test-canvas" id="mic-canvas" style="background-color:#fff"></canvas>
+                            </div>
+                        </div>
+                        <div class="row noise-container">
+                            <div class="offset-lg-5 offset-md-5 col-lg-7 col-12 col-md-7 ambient-noise invisible" id="no-noise">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M12 20C16.4183 20 20 16.4183 20 12C20 10.6137 19.6474 9.3098 19.027 8.17302L11.2006 15.9994L6.72059 11.5194L7.84059 10.3994L11.2006 13.7594L18.1166 6.84342C16.6491 5.1045 14.4535 4 12 4C7.58172 4 4 7.58172 4 12C4 16.4183 7.58172 20 12 20Z" fill="#83E661"/>
+                                </svg>    
+                                <%= __('Low/No Ambient Noise') %>                              
+                            </div>
+                            <div class="offset-lg-5 offset-md-5 col-lg-7 col-12 col-md-7 d-none ambient-noise" id="noise">
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M11.2387 5.4273L4.13195 17.0734C3.76928 17.6677 4.19704 18.4298 4.89327 18.4298H19.1067C19.803 18.4298 20.2307 17.6677 19.868 17.0734L12.7613 5.4273C12.4137 4.85757 11.5863 4.85757 11.2387 5.4273ZM11.3311 8.86204H13.1148V14.2133H11.3311V8.86204ZM12.223 16.8889C12.7155 16.8889 13.1148 16.4896 13.1148 15.997C13.1148 15.5045 12.7155 15.1052 12.223 15.1052C11.7304 15.1052 11.3311 15.5045 11.3311 15.997C11.3311 16.4896 11.7304 16.8889 12.223 16.8889Z" fill="#FCC232"/>
+                                </svg>                                  
+                                <%= __('Ambient Noise Detected') %>                              
                             </div>
                         </div>
                     </div>
