--- a/views/home.ejs
+++ b/views/home.ejs
@@ -61,7 +61,7 @@
                                 <%= __('Contribute Your Voice') %>
                             </div>
                         </div>
-                        <div class="col-lg-5 col-md-5 col-4">
+                        <div class="col-lg-5 col-md-5 col-4 text-center">
                                 <img src="img/say.svg" alt="speaker" id="start_recording" data-toggle="modal" class="cursor-pointer say-logo" data-target="#userModal">
                         </div>
 
@@ -86,7 +86,7 @@
                                 <%= __('Validate What They Say') %>
                             </div>
                         </div>
-                        <div class="col-lg-5 col-md-5 col-4">
+                        <div class="col-lg-5 col-md-5 col-4 text-center">
                             <a href="/validator-page">
                                 <img src="img/listen.svg" alt="validator" id="start_validating" class="cursor-pointer listen-logo"></a>
                         </div>
