--- a/views/thank-you.ejs
+++ b/views/thank-you.ejs
@@ -61,7 +61,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row mt-5">
+            <div class="row mt-5" id="did_you_know_section">
                 <div class="col-lg-8 offset-lg-2 border p-4 stats-container">
                     <div class="row justify-content-around align-items-center">
                         <div class="title">
