|Ramu| fix spacing issue

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -201,7 +201,7 @@
                 </div>
                 <div class="col-12 col-md-12 col-lg-12 px-0 oflow-x-hid"></div>
             </div>
-            <div class="row mt-5" id="view_all_btn">
+            <div class="row mt-5 mb-5" id="view_all_btn">
                 <div class="col-12 d-flex justify-content-center">
                     <a href="/dashboard" id="viewAllDetailsBtn" class="btn btn-outline-primary text-primary">
                         <%= __('VIEW ALL DETAILS') %>
