| Priyanshu | change disable feedback option  from footer

--- a/views/common/footer.ejs
+++ b/views/common/footer.ejs
@@ -20,7 +20,7 @@
                         <%= __('Privacy Policy') %>
                     </a>
                 </div>
-                <div class="py-2 px-16">
+                <div class="py-2 px-16 d-none">
                     <a href="/feedback">
                         <%= __('Feedback') %>
                     </a>
