|Ramu| Fix report alignment

--- a/views/record.ejs
+++ b/views/record.ejs
@@ -19,7 +19,7 @@
     <div id="content-wrapper" class="container-fluid d-flex flex-column pt-1 pb-1">
         <%- include modals/recording-instructions.ejs %>
         <div class="d-flex justify-content-end pt-3">
-            <button class="btn d-flex justify-content-between align-items-center" id="report_btn" type="button">
+            <button class="btn" id="report_btn" type="button">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M9 11V5H11V11H9Z" fill="#959595"/>
                     <path d="M10 14C10.5523 14 11 13.5523 11 13C11 12.4477 10.5523 12 10 12C9.44771 12 9 12.4477 9 13C9 13.5523 9.44771 14 10 14Z" fill="#959595"/>
