--- a/views/modals/report-modal.ejs
+++ b/views/modals/report-modal.ejs
@@ -16,7 +16,7 @@
                 <div class="mb-4">
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="reportRadio" id="offensive_id" value="Offensive">
-                        <label class="form-check-label" for="offensive_id">
+                        <label class="form-check-label xs-radio-label" for="offensive_id">
                             <%= __('Offensive') %>
                         </label>
                     </div>
@@ -27,7 +27,7 @@
                 <div class="mb-4">
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="reportRadio" id="prohibitedContent_id" value="Prohibited Content">
-                        <label class="form-check-label" for="prohibitedContent_id">
+                        <label class="form-check-label xs-radio-label" for="prohibitedContent_id">
                             <%= __('Prohibited Content') %>
                         </label>
                     </div>
@@ -38,7 +38,7 @@
                 <div class="mb-4">
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="reportRadio" id="politicalStatement_id" value="Political Statement">
-                        <label class="form-check-label" for="politicalStatement_id">
+                        <label class="form-check-label xs-radio-label" for="politicalStatement_id">
                             <%= __('Political Statement') %>
                         </label>
                     </div>
@@ -49,7 +49,7 @@
                 <div class="mb-4">
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="reportRadio" id="misinformation_id" value="Misinformation">
-                        <label class="form-check-label" for="misinformation_id">
+                        <label class="form-check-label xs-radio-label" for="misinformation_id">
                             <%= __('Misinformation') %>
                         </label>
                     </div>
@@ -60,7 +60,7 @@
                 <div class="mb-4">
                     <div class="form-check mb-3">
                         <input class="form-check-input" type="radio" name="reportRadio" id="others_id" value="Others">
-                        <label class="form-check-label" for="others_id">
+                        <label class="form-check-label xs-radio-label" for="others_id">
                             <%= __('Others')%>
                         </label>
                     </div>
